# NS-climbing

./: .gitignore  CROSSCHAIN_DEPOSITS.md  HACKATHON.md  PRIVY_MIGRATION.md  README.md  REHEARSALS.md  ROADMAP.md  SPEC.md  STATEMENT.md  TOMORROW.md  VERIFY_IT.md  agents.md  board.html  cheer.html  costs.html  index.html  llms.txt  privy-integration.patch  tally.html  watch.html
anychain/: index.html
anychain/assets/: AccountNotFoundScreen-Drht49fT-BCI1eI78.js  AccountNotFoundScreen-Drht49fT-BPKiY_oO.js  AccountNotFoundScreen-Drht49fT-B_FaA19O.js  AccountNotFoundScreen-Drht49fT-CCeukFsN.js  AccountNotFoundScreen-Drht49fT-CO44GncV.js  AccountNotFoundScreen-Drht49fT-COMu_Xf1.js  AccountNotFoundScreen-Drht49fT-D7v7VDCF.js  AccountNotFoundScreen-Drht49fT-D9UZWvgj.js  AccountNotFoundScreen-Drht49fT-DHlJSX2S.js  AccountNotFoundScreen-Drht49fT-DK3SMTaH.js  AccountNotFoundScreen-Drht49fT-DOJK-AID.js  AccountNotFoundScreen-Drht49fT-uphT595p.js  (+2160 more)
cheerboard/: .board.json  .gitignore  Anchor.toml  README.md  package-lock.json  package.json
cheerboard/programs/ns-cheer/: Cargo.toml
cheerboard/programs/ns-cheer/src/: lib.rs
deck/: .gitignore  HANDOFF_SLIDES.md  build_anychain_slide.py  build_pitch.py  gen_anychain.py  gen_arch.py  gen_escrow.py  push_to_slides.py
escrow/: .gitignore  ARCHITECTURE.md  Anchor.toml  CLIENT.md  DEPLOY.md  DEVNET_STATE.md  MAINNET_STATE.md  package-lock.json  package.json
escrow/programs/ns-climb-escrow/: Cargo.toml
escrow/programs/ns-climb-escrow/src/: lib.rs
privy/: .dockerignore  .gitignore  Dockerfile  README.md  fly.toml  package.json
(+50 files in other folders)
