[package]
name = "ns-cheer"
version = "0.1.0"
description = "NS climbing — live cheer tally on MagicBlock Ephemeral Rollup"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ns_cheer"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
custom-heap = []
custom-panic = []
anchor-debug = []

[dependencies]
anchor-lang = "1.0.2"
ephemeral-rollups-sdk = { version = "0.14.3", features = ["anchor"] }
