[package]
name = "ns-climb-escrow"
version = "0.1.0"
description = "NS climbing wall — refundable $20 USDC escrow campaign"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ns_climb_escrow"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
custom-heap = []
custom-panic = []
anchor-debug = []

[dependencies]
anchor-lang = "1.0.2"
anchor-spl = "1.0.2"
